--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,18 +6,7 @@ pages_build_output_dir = ".vercel/output/static"
 [vars]
 NEXT_PUBLIC_SITE_NAME = "AI音乐"
 
-[[d1_databases]]
-binding = "AIMUSIC_DB"
-database_name = "ai_music_db"
-database_id = "local"
-
-[[kv_namespaces]]
-binding = "AIMUSIC_KV"
-id = "local"
-
-[[r2_buckets]]
-binding = "AIMUSIC_MEDIA"
-bucket_name = "ai-music-media"
-
 [observability]
 enabled = true
+
+compatibility_flags = ["nodejs_compat"]
